# xfoil-python-windows

./: .gitignore  pyproject.toml  setup.py  test.py
xfoil/: xfoil.py
xfoil_api/: CMakeLists.txt
